# pyos_gaps

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
pyos_gaps/: __init__.py  decorators.py  version.py
pyos_gaps/docs/docs/: 01.md
pyos_gaps/docs/md/: 02.md  README.md
pyos_gaps/docs/rst/: 01.rst  02.rst  README.rst
pyos_gaps/heads/: x_head.py
pyos_gaps/heads/pyx/: pyx_3.py  pyx_310.py  pyx_311  pyx_311.py  pyx_312.py  pyx_313.py  pyx_314.py  pyx_38.py  pyx_39.py
pyos_gaps/heads/pyx_prevs/: pyx_315.py  pyx_316.py
pyos_gaps/heads/refs/: gaps_heads.py
pyos_gaps/pts3/: Grab.pts3
