[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyos_gaps"
version = "1.0.0"
description = "Gaps di PythonOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "DeMENIGECO"}
]

dependencies = []

keywords = ["gaps", "pythonos"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/pythonos-project/pyos_gaps"
Issues = "https://github.com/pythonos-project/pyos_gaps/issues"
